--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,18 @@
 *,
 *::before,
 *::after {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
-html,
 body {
-  padding: 0;
-  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
 }
